--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> VVL </title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" href="css/styles.css"/>
+	<link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 	<section class="intro">
