--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title> VVL </title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="style.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<section class="intro">
